--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # Crash log files
 crash.log
 crash.*.log
-
+git-runner-ssh_key
 
 .terraform.lock.hcl
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
