--- a/runner_ansible_setup/group_vars/runner.yaml
+++ b/runner_ansible_setup/group_vars/runner.yaml
@@ -1,3 +1,3 @@
 ansible_user: ubuntu
-ansible_ssh_private_key_file: ./git-runner-ssh_key
-ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+ansible_ssh_private_key_file: ./git-runner-ssh_key # path to the ssh keys of runner instance 
+ansible_ssh_common_args: '-o StrictHostKeyChecking=no' # only for testing
